# multi_agent_asset_compliance_system

./: .env.example  .gitignore  Dockerfile  INGESTION_GUIDELINES.md  LICENSE  Makefile  README.md  enterprise_audit_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  samconfig.toml  template.yaml  update_tests.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  main.py  rate_limiter.py
app/agents/: __init__.py  document_agent.py  evidence_agent.py  graph.py  image_agent.py  rule_agent.py  state.py  verdict_agent.py
app/api/v1/: admin.py  audit.py  chat.py  ingest.py  router.py
app/schemas/: __init__.py  admin.py  audit.py  chat.py  ingest.py
app/services/: __init__.py  document_loader.py  dynamodb_service.py  embedding_service.py  pinecone_service.py  s3_service.py  web_search_service.py
app/utils/: __init__.py  circuit_breaker.py  exceptions.py  logger.py  offline_clients.py  streaming.py
deploy/: README.md
deploy/aws-sam/: template.yaml
deploy/docker-ec2/: docker-compose.yml
docs/: DISASTER_RECOVERY.md  HOW_IT_WORKS.md  HOW_TO_RUN.md  PROJECT_FLOW.md
infra/: ec2_template.yaml  ssm_bootstrap.sh
scripts/: local_invoke.py
tests/: conftest.py
tests/integration/: test_admin_flow.py  test_audit_flow.py  test_chat_flow.py  test_ingest_flow.py
tests/scripts/: test_ddg.py
tests/unit/: test_config.py  test_offline_clients.py  test_streaming.py
tests/unit/test_agents/: __init__.py  test_document_agent.py  test_evidence_agent.py  test_image_agent.py  test_rule_agent.py  test_verdict_agent.py
(+11 files in other folders)
